--- a/hello/templates/home.html
+++ b/hello/templates/home.html
@@ -31,5 +31,7 @@
       <a href="{% url 'vigenere_input' %}">vigenere cipher</a>
       <br>
       <a href="{% url 'caesar' %}">caesar cipher</a>
+      <br>
+      <a href="{% url 'subst_input' %}">subst cipher</a>
   </body>
 </html>
