--- a/hello/templates/vigenere.html
+++ b/hello/templates/vigenere.html
@@ -1,13 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<style>
+    * {
+        font-size: 16px;
+        font-family: Consolas, sans-serif;
+        }
+    body {
+            background-color: rgb(248, 233, 214);
+            width: 480px;
+            margin: 0 auto;
+            }
+    h1 {
+        margin-top: 100px;
+        font-size: 50px;
+        font-family: 'Roboto Slab', serif;
+        text-align: center;
+    }
+</style>
+
+<!doctype html>
+<html lang="ko">
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,300&family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
     <title>Vigenere Encrypt</title>
 </head>
-<body>
+  <body>
     <h1>암호화 결과</h1>
     평문: {{ plaintext }} <br>
     키: {{ key }} <br>
     암호문: {{ ciphertext }} <br>
-</body>
+  </body>
 </html>
