subst design update

--- a/hello/templates/subst_input.html
+++ b/hello/templates/subst_input.html
@@ -1,5 +1,5 @@
 <form action="{% url 'subst' %}" method="GET">
-    <label for="msg">Text: </label>
-    <textarea name="msg" id="" cols="30" rows="10"></textarea>
+    <label for="msg">Text: </label><br>
+    <textarea name="msg" id="" cols="30" rows="10"></textarea><br>
     <button type="submit">encypt</button>
 </form>
