--- a/hello/templates/subst.html
+++ b/hello/templates/subst.html
@@ -1,10 +1,33 @@
-<html>
-    <head><title>Subst Cipher</title></head>
-    <body>
-        <div>
-            <h1>
-                암호문: {{ ciphertext }}
-            </h1>
-        </div>
-    </body>
+<style>
+    * {
+        font-size: 16px;
+        font-family: Consolas, sans-serif;
+        }
+    body {
+            background-color: rgb(248, 233, 214);
+            width: 480px;
+            margin: 0 auto;
+            }
+    h1 {
+        margin-top: 100px;
+        font-size: 50px;
+        font-family: 'Roboto Slab', serif;
+        text-align: center;
+    }
+</style>
+
+<!doctype html>
+<h1>
+    암호문 결과
+</h1>
+<html lang="ko">
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">    
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,300&family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Subst Cipher</title>
+</head>
+  <body>
+    {{ ciphertext }}
+  </body>
 </html>
