--- a/hello/templates/home.html
+++ b/hello/templates/home.html
@@ -1,37 +1,68 @@
+<script>
+    function hideDiv (){
+    document.getElementById("div1").className = "animated fadeOutRight";
+    self.setTimeout("delay()",1000);
+    }
+    function delay(){
+        document.getElementById("a1").style.display="block"
+        document.getElementById("a2").style.display="block"
+        document.getElementById("a3").style.display="block"
+    }
+    self.setTimeout("hideDiv()",2000);
+</script>
+
+
 <style>
     * {
         font-size: 16px;
         font-family: Consolas, sans-serif;
         }
     body {
-            background-color: rgb(248, 233, 214);
+            background-color: rgb(255, 249, 227);
             width: 480px;
             margin: 0 auto;
-            }
-    h1 {
-        margin-top: 100px;
-        font-size: 50px;
-        font-family: 'Roboto Slab', serif;
-        text-align: center;
     }
+
+    div{
+        /*margin-top: 100px;*/
+        position:absolute;
+        top:50%;
+        left:50%;
+        margin-left: -150px;
+        margin-top: -80px;
+
+        font-size: 50px;
+        font-family: 'Nanum Myeongjo', serif;
+        font-weight: 800;
+        /*text-align: center;*/
+    }
+    a{
+        display: none;
+    }
+
 </style>
 
 <!doctype html>
 <h1>
-    Simple Cipher
+
 </h1>
+<div id = div1 class="animated fadeInLeft">
+    Simple Cipher
+</div>
+
 <html lang="ko">
   <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">    
-    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,300&family=Roboto+Slab:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <meta charset="utf-8">
     <title>Simple_Cipher</title>
 </head>
-  <body>
-      <a href="{% url 'vigenere_input' %}">vigenere cipher</a>
-      <br>
-      <a href="{% url 'caesar' %}">caesar cipher</a>
-      <br>
-      <a href="{% url 'subst_input' %}">subst cipher</a>
-  </body>
+<body id="body1">
+    <a id="a1" href="{% url 'vigenere_input' %}">vigenere cipher</a>
+    <br>
+    <a id="a2" href="{% url 'caesar' %}">caesar cipher</a>
+    <br>
+    <a id="a3" href="{% url 'subst_input' %}">subst cipher</a>
+</body>
 </html>
